--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  video_player: ^2.0.0
+  flutter_cache_manager: ^3.1.2
 
 dev_dependencies:
   flutter_test:
